--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -11,7 +11,8 @@
     .contenter{
         max-width: 375px;
         padding: 0;
-        margin: 0;
+        margin: 0 100px;
+        /* margin-left: 100px; */
         text-align: center;
     }
     .content{
@@ -50,7 +51,7 @@
     /*Text*/
     .card{
         display: block;
-        margin: 0 40px;
+        margin: 0 130px;
         margin-bottom: 80px;
     }
     .card-colton, .card-anne, .card-irene{
