--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -11,9 +11,9 @@
     .contenter{
         max-width: 375px;
         padding: 0;
-        margin: 0 100px;
-        /* margin-left: 100px; */
+        margin: 0;
         text-align: center;
+        margin-left: 30px;
     }
     .content{
         display: block;
@@ -51,7 +51,7 @@
     /*Text*/
     .card{
         display: block;
-        margin: 0 130px;
+        margin: 0 60px;
         margin-bottom: 80px;
     }
     .card-colton, .card-anne, .card-irene{
